# serena

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  install_serena.bat  pyproject.toml  run_dashboard.py  start_serena.bat
src/serena/: __init__.py  agent.py  cli.py  constants.py  mcp.py
src/serena/config/: __init__.py  context_mode.py
src/serena/tools/: __init__.py
templates/: dashboard.html
